src/main/java/com/example/sync_book/error/DataConflictException.java
package com.example.sync_book.error;

public class DataConflictException extends AppException {
    public DataConflictException(String msg) {
        super(msg);
    }
}